# youtube-downloader

./: .dockerignore  .editorconfig  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  commitlint.config.ts  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  example.env  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  scripts.py  tsconfig.json
.changeset/: all-badgers-count.md  big-camels-go.md  big-readers-brush.md  breezy-bees-study.md  breezy-papayas-shop.md  bright-buses-stare.md  chatty-things-hear.md  chilly-socks-pay.md  chilly-trams-speak.md  clear-moles-report.md  clear-toys-turn.md  clever-rivers-brush.md  cold-sloths-worry.md  config.json  cool-bars-strive.md  cool-shoes-invite.md  cozy-lilies-fry.md  crisp-feet-kneel.md  cuddly-flowers-provide.md  cuddly-nights-judge.md  curly-hounds-greet.md  dry-bugs-raise.md  eager-spies-think.md  every-experts-mate.md  fast-mice-thank.md  fifty-eels-warn.md  floppy-donuts-shine.md  forty-things-lose.md  four-hoops-battle.md  fruity-corners-rhyme.md  gentle-swans-shake.md  gold-onions-work.md  green-icons-create.md  green-moments-greet.md  happy-ads-try.md  happy-pumpkins-flash.md  heavy-cows-find.md  hip-badgers-taste.md  khaki-guests-cheer.md  large-memes-tie.md  (+39 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: auto-merge.yml  cd.yml  check-and-build-frontend.yml  ci.yml  commitlint.yml  deploy-backend.yml  deploy-develop-backend.yml  main.yml  release.yml  security.yml
.husky/: pre-commit
apps/api/: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  api.d.ts  generate.py  generate_openapi.py  openapi.json  package.json  pyproject.toml  requirements.txt  scripts.py  scripts.sh
apps/api/app/: dependencies.py  main.py  models.py  session.py  timer.py
apps/api/app/core/: __init__.py  config.py  download.py  downloader.py  innertube.py  manager.py  managers.py  models.py  parse.py  search.py  threads.py  versions.py  youtube.py  ytdlp.py
apps/api/app/core/downloadable/: __init__.py  batch.py  common.py  single.py  video.py
apps/api/app/core/managers/: __init__.py  batch.py  downloads.py  search.py
apps/api/app/routers/: batch.py  downloads.py  search.py  session.py  versions.py
apps/api/app/utils/: managers.py  processors.py  threads.py  youtube.py
apps/cli/: package.json  pyproject.toml
apps/cli/ydcli/: __main__.py  commands.py  download.py  main.py  prompts.py  search.py  utils.py  validation.py
apps/extension/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .prettierrc.mjs  CHANGELOG.md  eslint.config.js  example.env  package.json  svelte.config.mjs  tsconfig.json  wxt.config.ts
apps/web/: .prettierignore  CHANGELOG.md  Dockerfile  eslint.config.js  example.env  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: .pre-commit-config.yaml  Dockerfile  README.md  generate_openapi.py  main.py  openapi.json  package.json  pyproject.toml  requirements.txt  scripts.sh
backend/app/: dependencies.py  main.py
backend/app/routers/: downloads.py  search.py  session.py
backend/app/utils/: managers.py  processors.py  youtube.py
backend/resources/: downloads.py  search.py
backend/routers/: downloads.py  search.py  session.py
backend/utils/: helpers.py  managers.py  models.py  processors.py  sse.py  threads.py  youtube.py
backend/yad_api/: main.py
backend/yad_api/routers/: downloads.py  search.py  session.py
backend/yad_api/utils/: managers.py  models.py  threads.py
client/: Dockerfile  README.md  example.env  package-lock.json  package.json  postcss.config.js  rollup.config.js  tailwind.config.js  tsconfig.json
client/public/: global.css  index.html
client/src/: App.svelte  index.d.ts  main.ts  routes.js  routes.ts
core/: .gitignore  .pre-commit-config.yaml  package.json  pyproject.toml  scripts.py
core/ydcore/: __init__.py  config.py  downloader.py  innertube.py  manager.py  managers.py  models.py  search.py  thread.py  threads.py  utilities.py  utils.py  ytdlp.py
core/ydcore/config/: __init__.py  ytdlp.py
core/ydcore/search/: __init__.py  core.py
core/youtubesearchpython/: __init__.pyi
core/yt_dlp/: __init__.pyi
docs/: BACKEND.md  DEPLOYMENT.md  DEVELOPMENT.md  FRONTEND.md  HOSTING.md  README.md  client.md  deployment.md  hosting.md  server.md
frontend/: .dockerignore  Dockerfile  README.md  example.env  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
frontend/src/: app.css  app.html
frontend/static/: manifest.json
server/: Dockerfile  README.md  app.py  db.sqlite3  package.json  requirements.txt
server/resources/: downloads.py  search.py  session.py
server/utils/: enums.py  sse.py  (+5 more)
(+311 files in other folders)
