[tool.poetry]
name = "backend"
version = "0.1.0"
description = "youtube to mp3 backend"
authors = ["Jordan Shatford"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
sse-starlette = "^0.9.0"
uvicorn = "^0.15.0"
youtube_dl = "^2021.6.6"
youtube-search-python = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
