[project]
name = "ydcore"
version = "1.0.0"
description = "Core functionality for downloading and searching YouTube."
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [
    {name = "Jordan Shatford", email = "jordanshatford@live.com"},
]
dependencies = [
    "yt-dlp==2023.9.24",
    "youtube-search-python>=1.6.6,<1.7.0",
    "pydantic>=2.1.1,<3.0.0",
]

[project.urls]
Repository = "https://github.com/jordanshatford/youtube-downloader"

[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"
