[project]
name = "yd-api"
version = "1.0.0"
description = "API to search and download YouTube videos in various formats."
license = "MIT"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi==0.135.*",
  "pydantic>=2.1.1,<3.0.0",
  "sse-starlette>=3.0.0,<4.0.0",
  "uvicorn==0.34.*",
  "yt-dlp[default]==2026.3.3"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "4.5.1"

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0,<3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
