[project]
name = "yd-api"
version = "1.0.0"
description = "API to search and download YouTube videos in various formats."
license = "MIT"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi[standard]>=0.135.0,<0.136.0",
  "pydantic>=2.1.1,<3.0.0",
  "yt-dlp[default]==2026.3.3"
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1,<5.0.0"
]

[tool.poetry]
package-mode = false
requires-poetry = ">=2.3,<3.0"

[build-system]
requires = ["poetry-core>=2.3.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
