[project]
name = "ydcli"
version = "1.0.0"
description = "CLI application for downloading and searching YouTube."
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [
    {name = "Jordan Shatford", email = "jordanshatford@live.com"},
]
dependencies = [
  "ydcore@{root:uri}/../../core"
]

[project.scripts]
ydcli = "ydcli.main:main"

[project.urls]
Repository = "https://github.com/jordanshatford/youtube-downloader"

[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
